2009-03-17  Elliott Baron  <ebaron@redhat.com>

	* MassifLaunchDelegate.java (handleLaunch): Bounds checking on number of output files.

2009-03-16  Elliott Baron  <ebaron@redhat.com>

	* MassifParser.java (MassifParser): Explicitly close file.

2009-03-13  Elliott Baron  <ebaron@redhat.com>

	* MassifParser.java (parseTree): Fixed NFE on localized percentage strings.
	
2009-03-12  Elliott Baron  <ebaron@redhat.com>

	* MassifPlugin.java: Use PluginConstants for referencing LaunchPlugin. 
	* MassifToolPage.java (createControl): Remove labels for checkboxes.
	* messages.properties: Remove colons from text for above.

2009-03-11  Elliott Baron  <ebaron@redhat.com>

	* MassifToolPage.java: Extracted constants for time unit names.

2009-02-27  Elliott Baron  <ebaron@redhat.com>

	* ChartControl.java: Clicking on interactive data point now also gives
	Valgrind view focus.

2009-02-25  Elliott Baron  <ebaron@redhat.com>

	* birt/ChartEditor.java (getControl): New getter.
	* MassifLaunchDelegate.java (handleLaunch): Renamed. 

2009-02-20  Elliott Baron  <ebaron@redhat.com>

	* HeapChart.java (HeapChart): Added suppressWarnings.

2009-02-12  Elliott Baron  <ebaron@redhat.com>

	* PowerOfTwoSpinner.java: Removed.
	* MassifCommandConstants.java: New file.
	* MassifLaunchConstants.java: New file.
	* MassifLaunchDelegate.java: New output path handling.
	* MassifToolPage.java (setDefaults): Refactored constants.
	(performApply): Likewise.
	(initializeFrom): Likewise.
	(isValid): Check alignment for power of 2.
	* messages.properties: New key.

2009-01-21  Elliott Baron  <ebaron@redhat.com>

	* MassifParser: Moved parsePID to AbstractValgrindTextParser.

2009-01-20  Elliott Baron  <ebaron@redhat.com>

	* MassifLaunchDelegate: Changed to handle multiple pids.
	* MassifOutput: New, organizes multiple snapshot arrays by pid.
	* MassifParser: Added parsing for pid.
	* MassifPidMenuAction: UI to switch between pids.
	* MassifViewPart: Added handling for multiple pids.